--- a/data/dataset_hf.ipynb
+++ b/data/dataset_hf.ipynb
@@ -207,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
